--- a/amp_gdpr_only.html
+++ b/amp_gdpr_only.html
@@ -11,14 +11,14 @@
     </head>
     <body>
         <h1>Welcome to the mobile web 07092021</h1>
-        <amp-analytics>
+        <amp-analytics data-block-on-consent="_till_accepted" type="googleanalytics">
             <script type=application/json>
             {
               "linkers":{"authId":{"ids":{"_a":"CLIENT_ID(AMP-CONSENT)"},"enabled":true,"proxyOnly":false}},"cookies":{"enabled":true,"authId":{"value":"LINKER_PARAM(authId, _a)"}}
             }
             </script>
         </amp-analytics>
-        <amp-consent id="consent" layout="nodisplay">
+        <amp-consent id="consent" layout="nodisplay" type="SourcePoint">
             <script type="application/json">
                 {
                     "consentInstanceId": "Sourcepoint",
