--- a/amp_gdpr_only.html
+++ b/amp_gdpr_only.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <h1>Welcome to the mobile web 07092021</h1>
-        <amp-analytics data-block-on-consent="_till_accepted" type="googleanalytics">
+        <amp-analytics>
             <script type=application/json>
             {
               "linkers":{"authId":{"ids":{"_a":"CLIENT_ID(AMP-CONSENT)"},"enabled":true,"proxyOnly":false}},"cookies":{"enabled":true,"authId":{"value":"LINKER_PARAM(authId, _a)"}}
